Added new h1 tag

--- a/Problem_Dimensional_Array.html
+++ b/Problem_Dimensional_Array.html
@@ -4,6 +4,7 @@
     <title>Problem Dimensional Array</title>
 </head>
 <body>
+    <h1>My name is archi...</h1>
     <script>
         var a = [[1,2,3,[11,22,33,['R','D','B',['aa']]]]]
 
